SERVER-85644 Ensure TSBlock clone only copies decompressed data when present (#18340)

GitOrigin-RevId: 9122a9b9ee52b0566f61c26ffec5532b6649a43a